--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 svg {
-  transform:rotate(-90deg);
+  transform: rotate(-90deg);
+}
+
+.container {
+  width: 410px;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
 }
