--- a/src/components/Dialog/dialog.css
+++ b/src/components/Dialog/dialog.css
@@ -176,9 +176,12 @@ hr {
   background: rgba(227, 225, 225, 1);
   border: 1px solid rgba(227, 225, 225, 1);
 }
+.dialogbtn{
+  margin: 0 auto;
+}
 
 button {
   background: none;
   border: none;
-  cursor: pointer;
+  cursor: pointer; 
 }
