--- a/src/components/Dialog/dialog.css
+++ b/src/components/Dialog/dialog.css
@@ -88,16 +88,41 @@ dialog {
     display: flex;
     gap: 16px;
 
-    button {
+    input[type="radio"] {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    input[type="radio"]:checked:after {
+      content: "Aa";
+      color: rgba(255, 255, 255, 1);
       width: 40px;
       height: 40px;
       border-radius: 20px;
-      background: rgba(239, 241, 250, 1);
+      display: flex;
+      justify-content: center;
+      padding-top: 6px;
+      background: rgba(22, 25, 50, 1);
+      position: absolute;
+      top: 0px;
+      left: 0px;
     }
 
-    button:hover {
-      outline: 1px solid rgba(239, 241, 250, 1);
-      outline-offset: 5px;
+    input[type="radio"]::before {
+      content: "Aa";
+      background: rgba(239, 241, 250, 1);
+      color: rgba(30, 33, 63, .73);
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      padding-top: 6px;
+      position: absolute;
+      top: 0px;
+      left: 0px;
     }
   }
 }
@@ -116,40 +141,52 @@ dialog {
     }
   }
 
-  .red {
+  input[type="radio"] {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    cursor: pointer;
+  }
+
+  input[type="radio"]:checked:after {
+    content: url("./tick.png");
+    font-size: 24px;
+    color: rgba(22, 25, 50, 1);
+    font-weight: 900;
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background: rgba(248, 112, 112, 1);
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
   }
 
-  .red:hover {
-    outline: 1px solid rgba(239, 241, 250, 1);
-    outline-offset: 5px;
-  }
-
-  .lightblue {
+  input[type="radio"]::before {
+    content: "";
+    color: rgba(30, 33, 63, .73);
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background: rgba(112, 243, 248, 1);
+    display: flex;
+    justify-content: center;
+    padding-top: 6px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
   }
 
-  .lightblue:hover {
-    outline: 1px solid rgba(239, 241, 250, 1);
-    outline-offset: 5px;
+  input[type="radio"]:nth-child(1):before {
+    background-color: rgba(248, 112, 112, 1);
   }
 
-  .purple {
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-    background: rgba(216, 129, 248, 1);
+  input[type="radio"]:nth-child(2)::before {
+    background-color: rgba(112, 243, 248, 1);
   }
 
-  .purple:hover {
-    outline: 1px solid rgba(239, 241, 250, 1);
-    outline-offset: 5px;
+  input[type="radio"]:nth-child(3)::before {
+    background-color: rgba(216, 129, 248, 1);
   }
 }
 
@@ -176,12 +213,13 @@ hr {
   background: rgba(227, 225, 225, 1);
   border: 1px solid rgba(227, 225, 225, 1);
 }
-.dialogbtn{
+
+.dialogbtn {
   margin: 0 auto;
 }
 
 button {
   background: none;
   border: none;
-  cursor: pointer; 
+  cursor: pointer;
 }
