--- a/src/components/Dialog/dialog.css
+++ b/src/components/Dialog/dialog.css
@@ -17,6 +17,7 @@ dialog {
 .dialogHeader {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   padding: 34px 40px;
   font-size: 28px;
@@ -48,6 +49,7 @@ dialog {
   .timeinputs {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     .inputCol {
       width: 140px;
@@ -81,6 +83,7 @@ dialog {
 .font {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
 
 
@@ -222,4 +225,393 @@ button {
   background: none;
   border: none;
   cursor: pointer;
+}
+
+@media (width <=768px) {
+
+  dialog {
+    background: transparent;
+    width: 327px;
+    height: 610px;
+  }
+
+  .dialogContainer {
+    background: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    height: 570px;
+  }
+
+  .dialogHeader {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 24px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.8px;
+    text-align: left;
+
+  }
+
+  .settingsContainer {
+    display: grid;
+    gap: 24px;
+    padding: 23px;
+    padding-bottom: 59px;
+
+    h2 {
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 16.12px;
+      letter-spacing: 5px;
+      text-align: left;
+      color: rgba(22, 25, 50, 1);
+    }
+  }
+
+  .time {
+    display: grid;
+    gap: 22px;
+
+    .timeinputs {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      flex-wrap: wrap;
+      gap: 10px;
+
+      .inputCol {
+        width: 280px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        p {
+          font-size: 12px;
+          font-weight: 700;
+          line-height: 14.88px;
+          text-align: left;
+          color: rgba(30, 33, 63, .4);
+          margin-bottom: 8px;
+        }
+
+        input {
+          width: 140px;
+          padding: 15px 16px 11px;
+          background: rgba(239, 241, 250, 1);
+          border-radius: 10px;
+          border: none;
+          font-size: 14px;
+          font-weight: 700;
+          line-height: 17.36px;
+          text-align: left;
+
+        }
+
+      }
+    }
+  }
+
+  .font {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+
+
+  }
+
+  .color {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+
+    .colorchoices {
+      display: flex;
+      gap: 16px;
+
+      div {
+        cursor: pointer;
+      }
+    }
+
+    input[type="radio"] {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    input[type="radio"]:checked:after {
+      content: url("./tick.png");
+      font-size: 24px;
+      color: rgba(22, 25, 50, 1);
+      font-weight: 900;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
+
+    input[type="radio"]::before {
+      content: "";
+      color: rgba(30, 33, 63, .73);
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      padding-top: 6px;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
+
+    input[type="radio"]:nth-child(1):before {
+      background-color: rgba(248, 112, 112, 1);
+    }
+
+    input[type="radio"]:nth-child(2)::before {
+      background-color: rgba(112, 243, 248, 1);
+    }
+
+    input[type="radio"]:nth-child(3)::before {
+      background-color: rgba(216, 129, 248, 1);
+    }
+  }
+
+  .apply {
+    background: rgba(248, 112, 112, 1);
+    width: 140px;
+    padding-block: 21px;
+    border-radius: 20px;
+    position: absolute;
+    bottom: calc(0% + 0px);
+    left: calc(50% - 70px);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.84px;
+    text-align: center;
+    color: white;
+  }
+
+  .apply:hover {
+    background: #f98d8d;
+  }
+
+  hr {
+    background: rgba(227, 225, 225, 1);
+    border: 1px solid rgba(227, 225, 225, 1);
+  }
+
+  .dialogbtn {
+    margin: 0 auto;
+  }
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+
+@media (width <=375px) {
+
+  dialog {
+    background: transparent;
+    width: 100%;
+    height: 610px;
+  }
+
+  .dialogContainer {
+    width: 100%;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    height: 570px;
+  }
+
+  .dialogHeader {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 24px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.8px;
+    text-align: left;
+  }
+
+  .settingsContainer {
+    display: grid;
+    gap: 24px;
+    padding: 23px;
+    padding-bottom: 59px;
+
+    h2 {
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 16.12px;
+      letter-spacing: 5px;
+      text-align: left;
+      color: rgba(22, 25, 50, 1);
+    }
+  }
+
+  .time {
+    display: grid;
+    gap: 22px;
+
+    .timeinputs {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      flex-wrap: wrap;
+      gap: 10px;
+
+      .inputCol {
+        width: 280px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        p {
+          font-size: 12px;
+          font-weight: 700;
+          line-height: 14.88px;
+          text-align: left;
+          color: rgba(30, 33, 63, .4);
+          margin-bottom: 8px;
+        }
+
+        input {
+          width: 140px;
+          padding: 15px 16px 11px;
+          background: rgba(239, 241, 250, 1);
+          border-radius: 10px;
+          border: none;
+          font-size: 14px;
+          font-weight: 700;
+          line-height: 17.36px;
+          text-align: left;
+        }
+      }
+    }
+  }
+
+  .font {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .color {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    .colorchoices {
+      display: flex;
+      gap: 16px;
+
+      div {
+        cursor: pointer;
+      }
+    }
+
+    input[type="radio"] {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    input[type="radio"]:checked:after {
+      content: url("./tick.png");
+      font-size: 24px;
+      color: rgba(22, 25, 50, 1);
+      font-weight: 900;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
+
+    input[type="radio"]::before {
+      content: "";
+      color: rgba(30, 33, 63, .73);
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      padding-top: 6px;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
+
+    input[type="radio"]:nth-child(1):before {
+      background-color: rgba(248, 112, 112, 1);
+    }
+
+    input[type="radio"]:nth-child(2)::before {
+      background-color: rgba(112, 243, 248, 1);
+    }
+
+    input[type="radio"]:nth-child(3)::before {
+      background-color: rgba(216, 129, 248, 1);
+    }
+  }
+
+  .apply {
+    background: rgba(248, 112, 112, 1);
+    width: 140px;
+    padding-block: 21px;
+    border-radius: 20px;
+    position: absolute;
+    bottom: calc(0% + 0px);
+    left: calc(50% - 70px);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.84px;
+    text-align: center;
+    color: white;
+  }
+
+  .apply:hover {
+    background: #f98d8d;
+  }
+
+  hr {
+    background: rgba(227, 225, 225, 1);
+    border: 1px solid rgba(227, 225, 225, 1);
+  }
+
+  .dialogbtn {
+    margin: 0 auto;
+  }
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
 }
