--- a/src/components/Dialog/dialog.css
+++ b/src/components/Dialog/dialog.css
@@ -428,15 +428,19 @@ button {
 
   dialog {
     background: transparent;
-    width: 100%;
+    width: 250px;
     height: 610px;
+    margin: auto;
+    margin-left: 25%;
   }
 
   .dialogContainer {
-    width: 100%;
+    width: 250px;
+    margin: auto;
     background: rgba(255, 255, 255, 1);
     border-radius: 20px;
     height: 570px;
+    padding: 0;
   }
 
   .dialogHeader {
@@ -456,6 +460,7 @@ button {
     gap: 24px;
     padding: 23px;
     padding-bottom: 59px;
+    padding: 10px;
 
     h2 {
       font-size: 13px;
@@ -479,7 +484,7 @@ button {
       gap: 10px;
 
       .inputCol {
-        width: 280px;
+        width: 220px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -514,6 +519,8 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    width: 200px;
+    margin: auto;
   }
 
   .color {
