--- a/src/components/Pomodoro/pomodoro.css
+++ b/src/components/Pomodoro/pomodoro.css
@@ -87,4 +87,54 @@
       }
     }
   }
-} 
+}
+
+
+@media (width <=375px) {
+
+  .pomodoroContainer {
+    width: 250px;
+    margin: 0 auto;
+  }
+
+  .pomodoro {
+    width: 250px;
+    height: 250px;
+    margin: 20px auto;
+
+    .timeCount {
+      width: 240px;
+      height: 240px;
+      margin: 0 auto;
+
+      .timeText {
+        width: 230px;
+        height: 230px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        padding: 0;
+
+        h1 {
+          width: 130px;
+          font-size: 80px;
+          font-weight: 700;
+          line-height: 99.22px;
+          letter-spacing: -4px;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+
+  .buttonList {
+    padding: 20px;
+    margin: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
